--- a/pom.xml
+++ b/pom.xml
@@ -212,8 +212,8 @@
   <module>ch.medshare.commons</module>
   <module>ch.medshare.mediport</module>
   <module>ch.medshare.mediport.feature</module>
-  <module>ch.pharmed.phmprescriber</module>
-  <module>ch.pharmed.phmprescriber.feature</module>
+  <!-- module>ch.pharmed.phmprescriber</module>
+  <module>ch.pharmed.phmprescriber.feature</module -->
   <module>com.hilotec.elexis.kgview.feature</module>
   <module>com.hilotec.elexis.kgview</module>
   <module>com.hilotec.elexis.messwerte.v2.feature</module>
@@ -235,9 +235,9 @@
   <!-- module>org.iatrix</module>
   <module>org.iatrix.feature</module>
   <module>org.iatrix.bestellung.rose</module>
-  <module>org.iatrix.bestellung.rose.feature</module>
+  <module>org.iatrix.bestellung.rose.feature</module -->
   <module>org.iatrix.messwerte</module>
-  <module>org.iatrix.messwerte.feature</module -->
+  <module>org.iatrix.messwerte.feature</module>
   <module>ch.elexis.base.p2site</module>
   <module>ch.unibe.iam.scg.archie</module>
   <module>ch.unibe.iam.scg.archie.feature</module>
