integrate risch in maven build system

--- a/ch.elexis.laborimport_risch/plugin.xml
+++ b/ch.elexis.laborimport_risch/plugin.xml
@@ -13,7 +13,7 @@
       <page
             category="ch.elexis.preferences.transporters"
             class="ch.elexis.laborimport.risch.PreferencePage"
-            id="ch.elexis.laborimport_risch.page1"
+            id="ch.elexis.laborimport_risch.prefs"
             name="Labor Risch">
       </page>
    </extension>
